<resources>
    <string name="app_name">Investment management</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="initial_budget">Initial Budget</string>
    <string name="example_example_com">example@example.com</string>
    <string name="log_in">Log In</string>
    <string name="hyperlink_to_create">Create account</string>
    <string name="sign_upTitle">Sign Up</string>
    <string name="settingTitle">SETTING</string>
    <string name="guide">GUIDE</string>
    <string name="title">Title</string>
    <string name="textview">TextView</string>
    <string name="new_to_investment_manager">New to investment manager?</string>
    <string name="change">Change</string>
    <string name="navHeaderSecondaryText">An investment platform</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navdrawer">Navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_investment_details">investment_details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_out">Sign out</string>
    <string name="hear_from_the_experts">Hear from the experts!!!</string>
    <string name="appbar">Investment Management</string>

</resources>