<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="27dp">

        <TextView
            android:id="@+id/sign_upTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/settingTitle"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="@font/montserrat"
            android:text="Profile:"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/enter_email"
                android:layout_width="214dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/email"
                android:layout_width="327dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/enter_username"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/enter_password"
                android:layout_width="214dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/password"
                android:layout_width="326dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/initial_budget"
                android:layout_width="113dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/initial_budget"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/budget"
                android:layout_width="226dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <Button
                android:id="@+id/changeButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:text="@string/change"
                android:textSize="22sp"></Button>

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="sign out"
            android:textSize="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>